--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -4,13 +4,10 @@ This KBase service provides methods for finding (protein) domains in
 genomes.
 
 
-VERSION: 0.01 (Released 1/13/2015)
+VERSION: 1.0.0 (Released 1/14/2015)
 ------------------------------------------
 NEW FEATURES:
--This is the first internal release of the GeneFamilies Service, all methods are new.
+-This is the first public release of the GeneFamilies Service, all methods are new.
 
 UPDATED FEATURES / MAJOR BUG FIXES:
 -none.
-
-ANTICIPATED FUTURE DEVELOPMENTS:
--public release of the service
